--- a/product.html
+++ b/product.html
@@ -149,7 +149,8 @@
             <p>Indonesia is one of the largest coconut producers in the world with a very distinctive quality. The use
               of coconut, of course, besides being consumed as a food ingredient, it can also be made into charcoal
               briquettes.</p>
-            <p id="atas" >The briquette charcoal produced from this coconut is extraordinary, has the perfect quality to be used as
+            <p id="atas">The briquette charcoal produced from this coconut is extraordinary, has the perfect quality to
+              be used as
               a substitute for fuel which of course has the advantage of a longer shelf life compared to ordinary
               charcoal. In addition, the use of coconut shell charcoal makes the briquettes have a fairly high burning
               heat and also less smoke, odorless and of course we have been certified.
@@ -200,7 +201,8 @@
                             quality. We can also pack briquettes according to your requirements.</p>
 
                         </div>
-                        <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Go to Spec.</a></p>
+                        <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Go
+                            to Spec.</a></p>
                       </div>
                     </div>
                     <div class="col-md-6 ftco-animate">
@@ -220,7 +222,8 @@
                             briquettes. In addition, briquettes from coconut shell charcoal are also safer,
                             environmentally friendly, because they do not cause smoke.</p>
                         </div>
-                        <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Go to Spec.</a></p>
+                        <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Go
+                            to Spec.</a></p>
                       </div>
                     </div>
                   </div>
@@ -243,7 +246,8 @@
                         <p><br></p>
                         <p><span class="per">Minimum Order Quantity</span> <br> <span class="mb-4">20 Ft</span> <span
                             class="per"> Container</span></p>
-                            <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
+                        <p class="button text-center"><a href="#atas"
+                            class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
                       </div>
                     </div>
                     <div class="col-md-3 ftco-animate">
@@ -257,8 +261,9 @@
                         </ul>
                         <p><br></p>
                         <p><span class="per">Minimum Order Quantity</span> <br> <span class="mb-4">20 Ft</span> <span
-                          class="per"> Container</span></p>
-                          <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
+                            class="per"> Container</span></p>
+                        <p class="button text-center"><a href="#atas"
+                            class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
                       </div>
                     </div>
                     <div class="col-md-3 ftco-animate">
@@ -272,8 +277,9 @@
                         </ul>
                         <p><br></p>
                         <p><span class="per">Minimum Order Quantity</span> <br> <span class="mb-4">20 Ft</span> <span
-                          class="per"> Container</span></p>
-                          <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
+                            class="per"> Container</span></p>
+                        <p class="button text-center"><a href="#atas"
+                            class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
                       </div>
                     </div>
                     <div class="col-md-3 ftco-animate">
@@ -287,8 +293,10 @@
                         </ul>
                         <p><br></p>
                         <p><span class="per">For other box Sizes, Design</span> <br>
-                          <span class="per">and your Brand available too.</span></p>
-                          <p class="button text-center"><a href="#atas" class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
+                          <span class="per">and your Brand available too.</span>
+                        </p>
+                        <p class="button text-center"><a href="#atas"
+                            class="btn btn-primary px-4 py-3 smoothscrolld">Certificate</a></p>
                       </div>
                     </div>
                   </div>
@@ -336,15 +344,13 @@
             <h3
               style="font-family: Barlow Condensed, sans-serif; text-transform: uppercase; font-weight: bolder; font-size: 36px;">
               Java Coffee Preanger</h3>
-            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a
-              paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-            <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have
-              been rewritten a thousand times and everything that was left from its origin would be the word "and" and
-              the
-              Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could
-              convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk
-              with
-              Longe and Parole and dragged her into their agency, where they abused her for their.
+            <p>It cannot be denied that Indonesia is the fourth largest coffee producer in the world after Brazil,
+              Vietnam and Colombia. Becoming one of the largest coffee producers is nothing new for Indonesia.
+              Apparently, Indonesia's track record in the coffee industry has occurred since Indonesia was controlled by
+              the Dutch colonialist, namely in 1696.</p>
+            <p id="atasi">So, it's no wonder that until now Indonesia has coffee production with an average of 639
+              thousand tons
+              per year (72.84 percent). robusta coffee and 27.16 percent arabica coffee). <br> <br> We process every coffee is ORGANIC.
             </p>
           </div>
         </div>
@@ -355,7 +361,7 @@
               <a class="nav-link ftco-animate active mr-lg-1" id="v-pills-4-tab" data-toggle="pill" href="#v-pills-4"
                 role="tab" aria-controls="v-pills-4" aria-selected="true">Description</a>
               <a class="nav-link ftco-animate mr-lg-1" id="v-pills-5-tab" data-toggle="pill" href="#v-pills-5"
-                role="tab" aria-controls="v-pills-5" aria-selected="false">Certificates</a>
+                role="tab" aria-controls="v-pills-5" aria-selected="false">Details</a>
             </div>
           </div>
           <div class="col-md-12 tab-wrap">
@@ -364,35 +370,87 @@
 
               <div class="tab-pane fade show active" id="v-pills-4" role="tabpanel" aria-labelledby="day-4-tab">
                 <div class="p-4">
-                  <div class="pricing-entry pb-5 text-center">
-                    <div>
-                      <h3 class="mb-4">Description</h3>
+                  <div class="row">
+                    <div class="col-md-6 ftco-animate">
+                      <div class="pricing-entry pb-5 text-center">
+                        <div>
+                          <h3 class="mb-4"
+                            style="font-family: Barlow Condensed, sans-serif; text-transform: uppercase; font-weight: bolder; font-size: 36px;">
+                            Description</h3>
+                          <p>The quality of Indonesian coffee beans produced does not disappoint consumers, especially
+                            for the European region. Coffee from the land of Java, which we know as Java Preanger, is so
+                            famous in Europe.
+                            Because of its popularity, Europeans often call it 'A Cup of Java' and no longer call it 'A
+                            Cup of Coffee' when drinking coffee. Starting until the 19th century, Java Preanger was the
+                            best coffee in the world.
+                            Java Preanger is often planted at an altitude of about 1000 meters above sea level according
+                            to the characteristics of Arabica coffee. Cultivation system, generally planted by
+                            individual farmers in Perhutani's garden areas where there are protective trees.</p>
+                        </div>
+                        <p class="button text-center"><a href="#atasi"
+                            class="btn btn-primary px-4 py-3 smoothscrolld">Go
+                            to Spec.</a></p>
+                      </div>
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore perferendis harum asperiores at
-                      ad corrupti laudantium quasi hic, facilis fugit possimus, architecto reprehenderit optio suscipit
-                      quod impedit consequatur ullam eum?</p>
-                    <p class="button text-center"><span class="btn btn-primary px-4 py-3">Get Offer</span></p>
+                    <div class="col-md-6 ftco-animate">
+                      <div class="pricing-entry pb-5 text-center">
+                        <div>
+                          <h3 class="mb-4"
+                            style="font-family: Barlow Condensed, sans-serif; text-transform: uppercase; font-weight: bolder; font-size: 36px;">
+                            Characteristics</h3>
+                          <p>The character of Java Preanger coffee lies in its body and moderate acidity with a rich
+                            aroma and taste. This coffee is also known as Malabar coffee because it is taken from one of
+                            the names of the mountains in the coffee plantation area. Another reason is because it comes
+                            from seeds brought by the Dutch from Malabar, India. <br>
+
+                            Harvest Period: May - August <br>
+                            Cupping Notes: Chocolate, Caramel, Nutty, Peach, Berry, Sweet, Floral, Lemony, Balance after
+                            taste. <br>
+                            Productivity: 300 - 5000 Tons of green beans (Green Bean) per year.</p>
+                          </p>
+                        </div>
+                        <p class="button text-center"><a href="#atasi"
+                            class="btn btn-primary px-4 py-3 smoothscrolld">Go
+                            to Spec.</a></p>
+                      </div>
+                    </div>
                   </div>
+                  <p><br></p>
                 </div>
               </div>
 
+
               <div class="tab-pane fade" id="v-pills-5" role="tabpanel" aria-labelledby="v-pills-day-5-tab">
                 <div class="p-4">
-                  <div class="pricing-entry pb-5 text-center">
-                    <div>
-                      <h3 class="mb-4">Certificate</h3>
-                      <p><span class="price">COA</span></p>
-                      <p style="color: rgba(0, 0, 0, 0.747);">Certificate of Analysis</p>
+                  <div class="row">
+                    <div class="col-md-6 ftco-animate">
+                      <div class="pricing-entry pb-5 text-center">
+                        <div>
+                          <p><span class="price">Geographical Area</span></p>
+                        </div>
+                        <p>It is planted in highland areas with a minimum altitude of 900 meters above sea level (asl),
+                          Mount Cikuray, Mount Papandayan, Mount Malabar, Mount Caringin, Mount Tilu, Mount Patuha,
+                          Mount Halu, Mount Beser, Mount Burangrang, Mount Tangkuban Perahu and Mount Manglayang <br> Harvest Period: May - August.
+                          <br> Productivity: 300 - 5000 Tons of green beans (Green Bean) per year.</p>
+                          <br>
+                        <p class="button text-center"><a href="#atasi"
+                            class="btn btn-primary px-4 py-3 smoothscrolld">Description</a></p>
+                      </div>
                     </div>
-                    <ul>
-                      <li>Ash Content = 2-3%</li>
-                      <li>Ash Colour = White/Silver</li>
-                      <li>Fixed Carbon = min. 80%</li>
-                      <li>Volatile Matter = less 14% </li>
-                      <li>Lighting Time = 90 - 120 minutes </li>
-                    </ul>
-                    <p class="button text-center"><span class="btn btn-primary px-4 py-3">Get Offer</span></p>
+                    <div class="col-md-6 ftco-animate">
+                      <div class="pricing-entry pb-5 text-center">
+                        <div>
+                          <p><span class="price">Processing System</span></p>
+                        </div>
+                          <li>Processing Type: Organic, Natural, Honey, Fullwashed Dryhulling, Wethulling.</li>
+                          <li>Cultivation System: Generally planted by individual farmers in Perhutani's garden areas where there are already protective trees.</li>
+                          <li>Cupping Notes: Chocolate, Caramel, Nutty, Peach, Berry, Sweet, Floral, Lemony, Balance after taste. </li>
+                          <li>Varieties: Typica, S-795 (S-Lini), Sigararutang, Kartika, Catimor and Andung Sari, and a little yellow Catura in the Garut region.</li>
+                        <p class="button text-center"><a href="#atasi"
+                            class="btn btn-primary px-4 py-3 smoothscrolld">Description</a></p>
+                    </div>
                   </div>
+                  <p><br></p>
                 </div>
               </div>
             </div>
@@ -452,14 +510,15 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br>   Bandung, Indonesia <br> 40294</span></li>
-								<li><a href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
-											2275
-											4077</span></a></li>
-								<li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
-											class="icon icon-envelope"></span><span
-											class="text">info@paramarthaagro.com</span></a></li>
+                <li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br> Bandung,
+                    Indonesia <br> 40294</span></li>
+                <li><a
+                    href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
+                    target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
+                      2275
+                      4077</span></a></li>
+                <li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
+                      class="icon icon-envelope"></span><span class="text">info@paramarthaagro.com</span></a></li>
               </ul>
             </div>
           </div>
