--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@
 							<a href="#" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-5.jpg);"></div>
 								<h2>Muhammad Rizal F.</h2>
-								<span class="position">Director</span>
+								<span class="position">CEO Paramartha Agro</span>
 							</a>
 						</div>
 					</div>
