--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 						<img src="images/work-6.jpg" class="img-fluid" alt="Colorlib Template">
 						<div class="text">
 							<span>Processing of</span>
-							<h3><a href="project.html">Pangalengan, West Java</a></h3>
+							<h3><a href="project.html">West Java</a></h3>
 						</div>
 						<a href="images/work-6.jpg"
 							class="icon image-popup d-flex justify-content-center align-items-center">
