--- a/about.html
+++ b/about.html
@@ -196,18 +196,19 @@
 							</a>
 						</div>
 						<div class="item">
+							<a href="https://www.linkedin.com/in/rizalfahmind/" target="_blank" class="team text-center">
+								<div class="img" style="background-image: url(images/stylist-5.jpg);"></div>
+								<h2>Muhammad Rizal F.</h2>
+								<span class="position">CEO Paramartha Agro</span>
+							</a>
+						</div>
+						<div class="item">
 							<a href="https://www.linkedin.com/in/nanda-amelia-lysti-19b695176/" target="_blank" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-3.jpg);"></div>
 								<h2>Nanda Amelia L.</h2>
 								<span class="position">Marketing Manager</span>
 							</a>
 						</div>
-						<div class="item">
-							<a href="#" class="team text-center">
-								<div class="img" style="background-image: url(images/stylist-5.jpg);"></div>
-								<h2>Muhammad Rizal F.</h2>
-								<span class="position">CEO Paramartha Agro</span>
-							</a>
 						</div>
 					</div>
 				</div>
