--- a/gallery.html
+++ b/gallery.html
@@ -105,8 +105,8 @@
           <div class="project">
             <img src="images/gallery-4.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Stock</span>
-              <h3><a href="project.html">Lots</a></h3>
+              <span>Size</span>
+              <h3><a href="project.html">Handling</a></h3>
             </div>
             <a href="images/gallery-4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
@@ -117,8 +117,8 @@
           <div class="project">
             <img src="images/gallery-3.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Long</span>
-              <h3><a href="project.html">Burn</a></h3>
+              <span>View</span>
+              <h3><a href="project.html">by Phone</a></h3>
             </div>
             <a href="images/gallery-3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
@@ -129,8 +129,8 @@
           <div class="project">
             <img src="images/gallery-2.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Custom</span>
-              <h3><a href="project.html">Packaging</a></h3>
+              <span>Cube</span>
+              <h3><a href="project.html">Shape</a></h3>
             </div>
             <a href="images/gallery-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
@@ -153,8 +153,8 @@
           <div class="project">
             <img src="images/gallery-10.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Java</span>
-              <h3><a href="project.html">Preanger</a></h3>
+              <span>Our</span>
+              <h3><a href="project.html">Process</a></h3>
             </div>
             <a href="images/gallery-10.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
@@ -165,8 +165,8 @@
           <div class="project">
             <img src="images/gallery-9.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Processing of</span>
-              <h3><a href="project.html">Pangalengan, West Java</a></h3>
+              <span>Coffee</span>
+              <h3><a href="project.html">Beans</a></h3>
             </div>
             <a href="images/gallery-9.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
@@ -177,8 +177,8 @@
           <div class="project">
             <img src="images/machine.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Java</span>
-              <h3><a href="project.html">Preanger</a></h3>
+              <span>Coffee</span>
+              <h3><a href="project.html">Machine</a></h3>
             </div>
             <a href="images/machine.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
@@ -189,8 +189,8 @@
           <div class="project">
             <img src="images/coco.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>plucked</span>
-              <h3><a href="project.html">With Love</a></h3>
+              <span>Best</span>
+              <h3><a href="project.html">coconut</a></h3>
             </div>
             <a href="images/coco.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
@@ -201,8 +201,8 @@
           <div class="project">
             <img src="images/half.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Java</span>
-              <h3><a href="project.html">Preanger</a></h3>
+              <span>half</span>
+              <h3><a href="project.html">coconut</a></h3>
             </div>
             <a href="images/half.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
@@ -213,8 +213,8 @@
           <div class="project">
             <img src="images/work-2.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Java</span>
-              <h3><a href="project.html">Preanger</a></h3>
+              <span>Long</span>
+              <h3><a href="project.html">burn</a></h3>
             </div>
             <a href="images/work-2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
@@ -225,8 +225,8 @@
           <div class="project">
             <img src="images/gallery-8.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Java</span>
-              <h3><a href="project.html">Preanger</a></h3>
+              <span>Dust</span>
+              <h3><a href="project.html">Charcoal</a></h3>
             </div>
             <a href="images/gallery-8.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
