--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<a class="ftco-heading-2 foot-logo" href="index.html">
+						<a class="ftco-heading-2 foot-logo smoothscrolld" href="#">
 							<img src="images/logoo.png" alt="Homepage">
 						</a>
 						<p> <br> Paramartha Agro is a company that provides agro products that are processed organically
