--- a/gallery.html
+++ b/gallery.html
@@ -187,24 +187,12 @@
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/coco.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/full.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
-              <span>Best</span>
-              <h3><a href="project.html">coconut</a></h3>
+              <span>Oven</span>
+              <h3><a href="project.html">Charcoal</a></h3>
             </div>
-            <a href="images/coco.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-              <span class="icon-expand"></span>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 ftco-animate">
-          <div class="project">
-            <img src="images/half.jpg" class="img-fluid" alt="Colorlib Template">
-            <div class="text">
-              <span>half</span>
-              <h3><a href="project.html">coconut</a></h3>
-            </div>
-            <a href="images/half.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+            <a href="images/full.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
@@ -229,6 +217,18 @@
               <h3><a href="project.html">Charcoal</a></h3>
             </div>
             <a href="images/gallery-8.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
+              <span class="icon-expand"></span>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 ftco-animate">
+          <div class="project">
+            <img src="images/truck.jpg" class="img-fluid" alt="Colorlib Template">
+            <div class="text">
+              <span>Our</span>
+              <h3><a href="project.html">Shipment</a></h3>
+            </div>
+            <a href="images/truck.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
               <span class="icon-expand"></span>
             </a>
           </div>
