--- a/about.html
+++ b/about.html
@@ -110,7 +110,29 @@
 				</div>
 			</div>
 		</div>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<div class="row justify-content-center pb-3">
+			<div class="col-md-10 heading-section text-center ftco-animate">
+				<h2 class="mb-4">Logo</h2>
+				<span class="subheading">philosophical of a symbol</span>
+			</div>
+		</div>
+		<div class="container">
+			<div class="row justify-content-center pb-3">
+				<span class="responss">
+					<img src="images/Logo detail.png" alt="">
+				</span>
+			</div>
+		</div>
 	</section>
+	<br>
+	<br>
 	<br>
 	<br>
 	<div class="container">
@@ -196,23 +218,25 @@
 							</a>
 						</div>
 						<div class="item">
-							<a href="https://www.linkedin.com/in/rizalfahmind/" target="_blank" class="team text-center">
+							<a href="https://www.linkedin.com/in/rizalfahmind/" target="_blank"
+								class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-5.jpg);"></div>
 								<h2>Muhammad Rizal F.</h2>
 								<span class="position">CEO Paramartha Agro</span>
 							</a>
 						</div>
 						<div class="item">
-							<a href="https://www.linkedin.com/in/nanda-amelia-lysti-19b695176/" target="_blank" class="team text-center">
+							<a href="https://www.linkedin.com/in/nanda-amelia-lysti-19b695176/" target="_blank"
+								class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-3.jpg);"></div>
 								<h2>Nanda Amelia L.</h2>
 								<span class="position">Marketing Manager</span>
 							</a>
 						</div>
-						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 	</section>
 
@@ -236,12 +260,15 @@
 								<img src="images/logo1.png" alt="Homepage">
 							</a>
 						</h1>
-						<h2 style="font-family: Kaushan Script, cursive; text-transform: capitalize; font-size: 20px; color: #4b4b4d;">We just not sale, We Build Trust!</h2>
+						<h2
+							style="font-family: Kaushan Script, cursive; text-transform: capitalize; font-size: 20px; color: #4b4b4d;">
+							We just not sale, We Build Trust!</h2>
 						<p>A prosperous country called Indonesia which has a diversity of cultures, resources and
 							extraordinary natural beauty. Water flows from the mountains, anything and everything can be
 							planted until it becomes a very high quality seed where you can plant wood into crops. Deep
 							within is a very high quality and very attractive selling point.</p>
-						<p class="mt-3"><a href="#aku" class="btn btn-primary btn-outline-primary smoothscrolld">Read more</a>
+						<p class="mt-3"><a href="#aku" class="btn btn-primary btn-outline-primary smoothscrolld">Read
+								more</a>
 						</p>
 					</div>
 				</div>
@@ -312,7 +339,8 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br>   Bandung, Indonesia <br> 40294</span></li>
+								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan
+										<br> Bandung, Indonesia <br> 40294</span></li>
 								<li><a href="https://api.whatsapp.com/send?phone=6285722754077&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
 										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
 											2275
