--- a/about.html
+++ b/about.html
@@ -115,8 +115,6 @@
 		<br>
 		<br>
 		<br>
-		<br>
-		<br>
 		<div class="row justify-content-center pb-3">
 			<div class="col-md-10 heading-section text-center ftco-animate">
 				<h2 class="mb-4">Logo</h2>
@@ -124,7 +122,7 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="row justify-content-center pb-3">
+			<div class="row justify-content-center pb-3 ftco-animate">
 				<span class="responss">
 					<img src="images/Logo detail.png" alt="">
 				</span>
@@ -133,10 +131,8 @@
 	</section>
 	<br>
 	<br>
-	<br>
-	<br>
 	<div class="container">
-		<div class="row justify-content-center pb-3">
+		<div class="row justify-content-center pb-3 ftco-animate">
 			<span class="responss">
 				<img src="images/processbusiness.jpg" alt="">
 			</span>
@@ -204,7 +200,7 @@
 				<div class="col-md-12 ftco-animate">
 					<div class="carousel-team owl-carousel">
 						<div class="item">
-							<a href="#" class="team text-center">
+							<a href="#" class="team text-center smoothscrolld">
 								<div class="img" style="background-image: url(images/stylist-4.jpg);"></div>
 								<h2>Faisal Ramdhani</h2>
 								<span class="position">Financial</span>
