--- a/about.html
+++ b/about.html
@@ -110,15 +110,16 @@
 				</div>
 			</div>
 		</div>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<div class="row justify-content-center pb-3">
-			<div class="col-md-10 heading-section text-center ftco-animate">
-				<h2 class="mb-4">Logo</h2>
-				<span class="subheading">philosophical of a symbol</span>
+	</section>
+	<br>
+	<br>
+	<section class="services-section ftco-section">
+		<div class="container">
+			<div class="row justify-content-center pb-3">
+				<div class="col-md-10 heading-section text-center ftco-animate">
+					<h2 class="mb-4">Logo</h2>
+					<span class="subheading">philosophical of a symbol</span>
+				</div>
 			</div>
 		</div>
 		<div class="container">
@@ -129,8 +130,6 @@
 			</div>
 		</div>
 	</section>
-	<br>
-	<br>
 	<div class="container">
 		<div class="row justify-content-center pb-3 ftco-animate">
 			<span class="responss">
