edit number footer

--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,10 @@
 				</div>
 			</div>
 			<div class="map">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1177.4841342487803!2d107.69138861286385!3d-6.942030099670682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6cf129f40d9600a!2sKantor%20Terminal%20Petikemas%20Bandung%20Gedebage!5e0!3m2!1sen!2sid!4v1612487153294!5m2!1sen!2sid" width="1200" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+				<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1177.4841342487803!2d107.69138861286385!3d-6.942030099670682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6cf129f40d9600a!2sKantor%20Terminal%20Petikemas%20Bandung%20Gedebage!5e0!3m2!1sen!2sid!4v1612487153294!5m2!1sen!2sid"
+					width="1200" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+					tabindex="0"></iframe>
 			</div>
 		</div>
 	</section>
@@ -193,11 +196,11 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br> Bandung, Indonesia <br> 40294</span></li>
+								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan
+										<br> Bandung, Indonesia <br> 40294</span></li>
 								<li><a href="https://api.whatsapp.com/send?phone=628814557018&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
-											2275
-											4077</span></a></li>
+										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 881
+											455 7018</span></a></li>
 								<li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
 											class="icon icon-envelope"></span><span
 											class="text">info@paramarthaagro.com</span></a></li>
