--- a/gallery.html
+++ b/gallery.html
@@ -289,10 +289,9 @@
             <div class="block-23 mb-3">
               <ul>
                 <li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br>   Bandung, Indonesia <br> 40294</span></li>
-								<li><a href="https://api.whatsapp.com/send?phone=628814557018&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
-											2275
-											4077</span></a></li>
+								<li><a
+                    href="https://api.whatsapp.com/send?phone=628814557018&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
+                    target="_blank"><span class="icon icon-phone"></span><span class="text">+62 881 455 7018</span></a></li>
 								<li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
 											class="icon icon-envelope"></span><span
 											class="text">info@paramarthaagro.com</span></a></li>
