--- a/index.html
+++ b/index.html
@@ -321,7 +321,8 @@
 							</a>
 						</div>
 						<div class="item">
-							<a href="https://www.linkedin.com/in/rizalfahmind/" target="_blank" class="team text-center">
+							<a href="https://www.linkedin.com/in/rizalfahmind/" target="_blank"
+								class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-5.jpg);"></div>
 								<h2>Muhammad Rizal F.</h2>
 								<span class="position">CEO Paramartha Agro</span>
@@ -374,7 +375,8 @@
 							<div class="item">
 								<div class="testimony-wrap pb-4">
 									<div class="text">
-										<p class="mb-4">Charcoal briquettes from Indonesia are very good for our country as a raw material for shisha. We really appreciate their service.</p>
+										<p class="mb-4">Charcoal briquettes from Indonesia are very good for our country
+											as a raw material for shisha. We really appreciate their service.</p>
 									</div>
 									<div class="d-flex">
 										<div class="user-img" style="background-image: url(images/person_2.jpg)">
@@ -389,7 +391,8 @@
 							<div class="item">
 								<div class="testimony-wrap pb-4">
 									<div class="text">
-										<p class="mb-4">It is difficult to find a business partner like them in carrying out the company's commitment to quality. They are amazing!</p>
+										<p class="mb-4">It is difficult to find a business partner like them in carrying
+											out the company's commitment to quality. They are amazing!</p>
 									</div>
 									<div class="d-flex">
 										<div class="user-img" style="background-image: url(images/person_3.jpg)">
@@ -461,9 +464,8 @@
 								<li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan
 										<br> Bandung, Indonesia <br> 40294</span></li>
 								<li><a href="https://api.whatsapp.com/send?phone=628814557018&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
-											2275
-											4077</span></a></li>
+										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 881
+											455 7018</span></a></li>
 								<li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
 											class="icon icon-envelope"></span><span
 											class="text">info@paramarthaagro.com</span></a></li>
