--- a/termcondition.html
+++ b/termcondition.html
@@ -134,7 +134,8 @@
 
           <p>This Agreement shall begin on the date hereof. Our Terms and Conditions were created with the help of the
             <a href="https://www.termsandconditionsgenerator.com">Terms And Conditions Generator</a> and the <a
-              href="https://www.generateprivacypolicy.com">Privacy Policy Generator</a>.</p>
+              href="https://www.generateprivacypolicy.com">Privacy Policy Generator</a>.
+          </p>
 
           <p>Parts of this website offer an opportunity for users to post and exchange opinions and information in
             certain areas of the website. Paramartha Agro does not filter, edit, publish or review Comments prior to
@@ -333,14 +334,14 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br>   Bandung, Indonesia <br> 40294</span></li>
-								<li><a href="https://api.whatsapp.com/send?phone=628814557018&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
-										target="_blank"><span class="icon icon-phone"></span><span class="text">+62 857
-											2275
-											4077</span></a></li>
-								<li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
-											class="icon icon-envelope"></span><span
-											class="text">info@paramarthaagro.com</span></a></li>
+                <li><span class="icon icon-map-marker"></span><span class="text">Jalan Gedebage Selatan <br> Bandung,
+                    Indonesia <br> 40294</span></li>
+                <li><a
+                    href="https://api.whatsapp.com/send?phone=628814557018&text=I%27m%20interested%20in%20your%20briquette%20for%20sale"
+                    target="_blank"><span class="icon icon-phone"></span><span class="text">+62 881 455 7018</span></a>
+                </li>
+                <li><a href="mailto:paramarthaagro@gmail.com" target="_blank"><span
+                      class="icon icon-envelope"></span><span class="text">info@paramarthaagro.com</span></a></li>
               </ul>
             </div>
           </div>
