--- a/about.html
+++ b/about.html
@@ -199,17 +199,18 @@
 				<div class="col-md-12 ftco-animate">
 					<div class="carousel-team owl-carousel">
 						<div class="item">
-							<a href="#" class="team text-center smoothscrolld">
+							<a href="https://www.linkedin.com//" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-4.jpg);"></div>
-								<h2>Faisal Ramdhani</h2>
+								<h2>Faizal Alvian</h2>
 								<span class="position">Financial</span>
 							</a>
 						</div>
 						<div class="item">
-							<a href="https://instagram.com/radityabowo/" target="_blank" class="team text-center">
-								<div class="img" style="background-image: url(images/stylist-2.jpg);"></div>
-								<h2>Rudi Aditya</h2>
-								<span class="position">Public Relation</span>
+							<a href="https://www.linkedin.com/in/nanda-amelia-lysti-19b695176/" target="_blank"
+								class="team text-center">
+								<div class="img" style="background-image: url(images/stylist-3.jpg);"></div>
+								<h2>Nanda Amelia L.</h2>
+								<span class="position">Marketing Manager</span>
 							</a>
 						</div>
 						<div class="item">
@@ -221,11 +222,11 @@
 							</a>
 						</div>
 						<div class="item">
-							<a href="https://www.linkedin.com/in/nanda-amelia-lysti-19b695176/" target="_blank"
+							<a href="https://www.linkedin.com//" target="_blank"
 								class="team text-center">
-								<div class="img" style="background-image: url(images/stylist-3.jpg);"></div>
-								<h2>Nanda Amelia L.</h2>
-								<span class="position">Marketing Manager</span>
+								<div class="img" style="background-image: url(images/stylist-2.jpg);"></div>
+								<h2>Ellena Putri</h2>
+								<span class="position">Public Relation</span>
 							</a>
 						</div>
 					</div>
