--- a/gallery.html
+++ b/gallery.html
@@ -91,7 +91,7 @@
       <div class="row no-gutters">
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/gallery-1.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/work-3.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
               <span>Our</span>
               <h3><a href="project.html">Charcoal</a></h3>
@@ -103,7 +103,7 @@
         </div>
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="project">
-            <img src="images/gallery-4.jpg" class="img-fluid" alt="Colorlib Template">
+            <img src="images/work-11.jpg" class="img-fluid" alt="Colorlib Template">
             <div class="text">
               <span>Size</span>
               <h3><a href="project.html">Handling</a></h3>
