--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 				</div>
 				<div class="col-md-6 col-lg-3 ftco-animate">
 					<div class="project">
-						<img src="images/work-3.jpg" class="img-fluid" alt="Colorlib Template">
+						<img src="images/gallery-1.jpg" class="img-fluid" alt="Colorlib Template">
 						<div class="text">
 							<span>Stock</span>
 							<h3><a href="project.html">Lots</a></h3>
@@ -307,17 +307,18 @@
 				<div class="col-md-12 ftco-animate">
 					<div class="carousel-team owl-carousel">
 						<div class="item">
-							<a href="#" class="team text-center">
+							<a href="https://www.linkedin.com//" class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-4.jpg);"></div>
-								<h2>Faisal Ramdhani</h2>
+								<h2>Faizal Alvian</h2>
 								<span class="position">Financial</span>
 							</a>
 						</div>
 						<div class="item">
-							<a href="https://instagram.com/radityabowo/" target="_blank" class="team text-center">
-								<div class="img" style="background-image: url(images/stylist-2.jpg);"></div>
-								<h2>Rudi Aditya</h2>
-								<span class="position">Public Relation</span>
+							<a href="https://www.linkedin.com/in/nanda-amelia-lysti-19b695176/" target="_blank"
+								class="team text-center">
+								<div class="img" style="background-image: url(images/stylist-3.jpg);"></div>
+								<h2>Nanda Amelia L.</h2>
+								<span class="position">Marketing Manager</span>
 							</a>
 						</div>
 						<div class="item">
@@ -329,11 +330,11 @@
 							</a>
 						</div>
 						<div class="item">
-							<a href="https://www.linkedin.com/in/nanda-amelia-lysti-19b695176/" target="_blank"
+							<a href="https://www.linkedin.com//" target="_blank"
 								class="team text-center">
-								<div class="img" style="background-image: url(images/stylist-3.jpg);"></div>
-								<h2>Nanda Amelia L.</h2>
-								<span class="position">Marketing Manager</span>
+								<div class="img" style="background-image: url(images/stylist-2.jpg);"></div>
+								<h2>Ellena Putri</h2>
+								<span class="position">Public Relation</span>
 							</a>
 						</div>
 					</div>
