--- a/index.html
+++ b/index.html
@@ -307,10 +307,11 @@
 				<div class="col-md-12 ftco-animate">
 					<div class="carousel-team owl-carousel">
 						<div class="item">
-							<a href="https://www.linkedin.com//" class="team text-center">
-								<div class="img" style="background-image: url(images/stylist-4.jpg);"></div>
-								<h2>Faizal Alvian</h2>
-								<span class="position">Financial</span>
+							<a href="https://www.linkedin.com/in/rizalfahmind/" target="_blank"
+								class="team text-center">
+								<div class="img" style="background-image: url(images/stylist-5.jpg);"></div>
+								<h2>Muhammad Rizal F.</h2>
+								<span class="position">CEO Paramartha Agro</span>
 							</a>
 						</div>
 						<div class="item">
@@ -322,19 +323,18 @@
 							</a>
 						</div>
 						<div class="item">
-							<a href="https://www.linkedin.com/in/rizalfahmind/" target="_blank"
-								class="team text-center">
-								<div class="img" style="background-image: url(images/stylist-5.jpg);"></div>
-								<h2>Muhammad Rizal F.</h2>
-								<span class="position">CEO Paramartha Agro</span>
-							</a>
-						</div>
-						<div class="item">
 							<a href="https://www.linkedin.com//" target="_blank"
 								class="team text-center">
 								<div class="img" style="background-image: url(images/stylist-2.jpg);"></div>
 								<h2>Ellena Putri</h2>
 								<span class="position">Public Relation</span>
+							</a>
+						</div>
+						<div class="item">
+							<a href="https://www.linkedin.com//" class="team text-center">
+								<div class="img" style="background-image: url(images/stylist-4.jpg);"></div>
+								<h2>Faizal Alvian</h2>
+								<span class="position">Financial</span>
 							</a>
 						</div>
 					</div>
@@ -488,13 +488,6 @@
 		</div>
 	</footer>
 
-	<!-- Chat-->
-	<div class="joinchat joinchat--right joinchat--dark-auto"
-		data-settings='{"telephone":"628814557018","mobile_only":false,"button_delay":1,"whatsapp_web":true,"message_views":2,"message_delay":5,"message_badge":false,"message_send":"Hi, Paramartha!","message_hash":"2bca28a0"}'>
-		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-		<div class="elfsight-app-c81d22a6-5ebc-428d-8327-5595d2113b34"></div>
-	</div>
-
 
 	<!-- loader -->
 	<div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
@@ -519,12 +512,11 @@
 	<script src="js/bootstrap-datepicker.js"></script>
 	<script src="js/jquery.timepicker.min.js"></script>
 	<script src="js/scrollax.min.js"></script>
-	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-	<script src="js/google-map.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/joinchat.js"></script>
 	<script src="js/jquery.min.js"></script>
+	<!-- Chat-->
+	<script async data-id="73207" src="https://cdn.widgetwhats.com/script.min.js"></script>
 
 </body>
 
