--- a/termcondition.html
+++ b/termcondition.html
@@ -360,14 +360,6 @@
     </div>
   </footer>
 
-  <!-- Chat-->
-  <div class="joinchat joinchat--right joinchat--dark-auto"
-    data-settings='{"telephone":"628814557018","mobile_only":false,"button_delay":1,"whatsapp_web":true,"message_views":2,"message_delay":5,"message_badge":false,"message_send":"Hi, Paramartha!","message_hash":"2bca28a0"}'>
-    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-    <div class="elfsight-app-c81d22a6-5ebc-428d-8327-5595d2113b34"></div>
-  </div>
-
-
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
       <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
@@ -391,12 +383,11 @@
   <script src="js/bootstrap-datepicker.js"></script>
   <script src="js/jquery.timepicker.min.js"></script>
   <script src="js/scrollax.min.js"></script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-  <script src="js/google-map.js"></script>
   <script src="js/main.js"></script>
   <script src="js/joinchat.js"></script>
   <script src="js/jquery.min.js"></script>
+	<!-- Chat-->
+	<script async data-id="73207" src="https://cdn.widgetwhats.com/script.min.js"></script>
 
 </body>
 
