--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 						<div class="icon"><span class="flaticon-phone-call"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Phone/Whatsapp</h3>
-							<p>Contact us directly by our whatsapp at +628814557018</p>
+							<p>Contact us directly by our phone or whatsapp at +628814557018</p>
 						</div>
 					</div>
 				</div>
@@ -98,7 +98,7 @@
 						<div class="icon"><span class="flaticon-home"></span></div>
 						<div class="media-body">
 							<h3 class="heading mb-3">Address</h3>
-							<p>Jalan Damar 5 No. 10 Komplek Buana Soetta, Bandung, Indonesia</p>
+							<p>Jalan Gedebage Selatan, Bandung City, Indonesia 40294</p>
 						</div>
 					</div>
 				</div>
