--- a/privacy.html
+++ b/privacy.html
@@ -54,7 +54,8 @@
           <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-          <li class="nav-item active"><a href="#" class="nav-link">FaQ</a></li>
+          <li class="nav-item active"><a href="faq.html" class="nav-link">FaQ</a></li>
+					<li class="nav-item"><a href="Paramartha Agro Brochure.pdf" class="nav-link" download="" target="_blank">Brochure</a></li>
         </ul>
       </div>
     </div>
