--- a/product.html
+++ b/product.html
@@ -54,6 +54,7 @@
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           <li class="nav-item"><a href="faq.html" class="nav-link">FaQ</a></li>
+					<li class="nav-item"><a href="Paramartha Agro Brochure.pdf" class="nav-link" download="" target="_blank">Brochure</a></li>
         </ul>
       </div>
     </div>
