--- a/product.html
+++ b/product.html
@@ -315,6 +315,7 @@
                       <li>Ash Content = 2-3%</li>
                       <li>Ash Colour = White/Silver</li>
                       <li>Fixed Carbon = min. 80%</li>
+                      <li>Moisture Content = 1-2%</li>
                       <li>Volatile Matter = less 14% </li>
                       <li>Lighting Time = 90 - 120 minutes </li>
                     </ul>
