--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<div class="services-wrap d-flex align-items-center img"
 						style="background-image: url(images/formen.jpg);">
 						<div class="text">
-							<h3>Charcoal Briquettes</h3>
+							<h3>Coconut Charcoal Briquettes</h3>
 							<p><a href="product.html" class="btn-custom">See details <span
 										class="ion-ios-arrow-round-forward"></span></a></p>
 						</div>
